--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>Lexington Debate<br><small>Backers of Lexington Debate</small></h1>
     </span>
     <span>
-      <p>A new <a href="lhsdebate.org">lhsdebate.org</a> is coming soon.</p>
+      <p>A new <a href="//lhsdebate.org">lhsdebate.org</a> is coming soon.</p>
     </span>
     <span>
       <p>Backers of Lexington Debate (BOLD) is a parent volunteer organization that supports the debate program at Lexington High School. Parents provide financial support through contributions and fundraising activities conducted by BOLD. Parents
@@ -30,7 +30,7 @@
     </span>
     <span>
       <h3>Lexington Debate Insitute</h3>
-      <p>The Lexington Debate Institute is back for a second season! Information on Summer 2018 can be found at <a href="lexdebateinstitute.com">lexdebateinstitute.com</a>.</p>
+      <p>The Lexington Debate Institute is back for a second season! Information on Summer 2018 can be found at <a href="//lexdebateinstitute.com">lexdebateinstitute.com</a>.</p>
     </span>
     <!--
     <span><p><small>
