A 'lil content update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </span>
     <span>
       <h3>Lexington Debate Insitute</h3>
-      <p>The Lexington Debate Institute is back for a second season! Information on Summer 2018 can be found at <a href="//lexdebateinstitute.com">lexdebateinstitute.com</a>.</p>
+      <p>The Lexington Debate Institute is back! Information can be found at <a href="//lexdebateinstitute.com">lexdebateinstitute.com</a>.</p>
     </span>
     <!--
     <span><p><small>
