--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </span>
     <span>
       <h3>Parent Guidelines</h3>
-      <p><a href="/BOLD Parent Guidelines 2020-2021.pdf">Download the 2020-2021 Lexington Debate Parent Guidelines</a></p>
+      <p><a href="/BOLD_Parent_Guidelines_2020-2021.pdf" target="_blank">Download the 2020-2021 Lexington Debate Parent Guidelines</a></p>
     </span>
     <span>
       <button onclick="on()">Additional Details</button>
